<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music"
            android:title="@string/my_music" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/youtube" />

        <item
            android:id="@+id/nav_ctg"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/categories" />
    </group>
</menu>