<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_titulo"
        android:layout_width="match_parent"
        android:background="@color/app"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/new_music"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnCerrar"
            android:background="@android:drawable/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="20dp"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/editUrl"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:enabled="false"
        android:textSize="14dp"
        android:layout_height="52dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="18"
        android:hint="URL..."
        android:padding="16dp"
        android:imeOptions="actionNext"
        android:textColorHint="#727272" />
    <EditText
        android:id="@+id/editCode"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:enabled="false"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="7dp"
        android:ems="18"
        android:hint="Codigo..."
        android:padding="6dp"
        android:imeOptions="actionNext"
        android:textColorHint="#727272" />
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_music_note"
        android:drawablePadding="6dp"
        android:ems="18"
        android:hint="@string/name_music"
        android:padding="6dp"
        android:imeOptions="actionNext"
        android:textColorHint="#727272" />
    <EditText
        android:id="@+id/editDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="18"
        android:hint="@string/description"
        android:padding="6dp"
        android:imeOptions="actionPrevious"
        android:textColorHint="#727272" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/style_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCerrar2"
            android:background="@drawable/btn_light"
            android:text="@string/cancel"
            android:drawableLeft="@android:drawable/ic_delete"
            android:layout_width="wrap_content"
            android:drawablePadding="5dp"
            android:paddingRight="15dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSend"
            android:drawablePadding="5dp"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="6dp"
            android:drawableLeft="@drawable/ic_save"
            android:background="@drawable/btn_primary"
            android:textColor="@android:color/white"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>